--- a/app/src/main/res/layout/activity_inicio.xml
+++ b/app/src/main/res/layout/activity_inicio.xml
@@ -8,12 +8,33 @@
     android:layout_height="match_parent"
     tools:context=".InicioActivity">
 
-    <TextView
+
+
+    
+    <com.google.android.material.appbar.AppBarLayout
+        android:id="@+id/appBarLayout"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+
+        <include
+            android:id="@+id/app_main_toolbar"
+            layout="@layout/toolbar_principal"/>
+        <com.google.android.material.tabs.TabLayout
+            android:id="@+id/main_tabs"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="@color/cardview_dark_background"
+            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">
+        </com.google.android.material.tabs.TabLayout>
+
+    </com.google.android.material.appbar.AppBarLayout>
+    
+    <androidx.viewpager.widget.ViewPager
+        android:id="@+id/main_tabs_peger"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="INGRESADO CON EXITO!!!"
-        android:layout_centerHorizontal="true"
-        android:layout_centerVertical="true"
-        android:textAlignment="center"/>
+        android:layout_below="@+id/appBarLayout">
+    </androidx.viewpager.widget.ViewPager>
+
 
 </RelativeLayout>
