--- a/app/src/main/res/layout/activity_principal.xml
+++ b/app/src/main/res/layout/activity_principal.xml
@@ -5,21 +5,16 @@
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".LoginActivity">
-
-    <include
-        android:id="@+id/toolbar_login"
-        layout="@layout/toolbar_principal"></include>
+    tools:context=".PrincipalActivity">
 
     <TextView
         android:id="@+id/textoslogin"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/toolbar_login"
-        android:text="Bienvenido Chat a\nICC-451\n\n Inicia Sesión"
+        android:text="Bienvenido Chat a\nICC-451"
         android:textStyle="italic"
         android:textAlignment="center"
-        android:layout_marginTop="15dp"
+        android:layout_marginTop="85dp"
         android:textSize="25sp" />
 
     <ImageView
@@ -31,44 +26,29 @@
         android:layout_marginTop="20dp"
         android:src="@drawable/chaticc"/>
 
-    <!-- Campo de texto para ingresar el correo -->
-    <EditText
-        android:id="@+id/correo_login"
+
+    <Button
+        android:id="@+id/btn_loginPrincipal"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentStart="true"
         android:layout_marginStart="30dp"
         android:layout_marginEnd="30dp"
         android:layout_below="@+id/imagenlogin"
-        android:layout_marginTop="15dp"
-        android:hint="Ingresar correo"
-        android:inputType="textEmailAddress"/>
-
-    <!-- Campo de texto para ingresar la contraseña -->
-    <EditText
-        android:id="@+id/contrasena_login"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_alignParentStart="true"
-        android:layout_marginStart="30dp"
-        android:layout_marginEnd="30dp"
-        android:layout_below="@+id/correo_login"
-        android:layout_marginTop="15dp"
-        android:hint="Ingresar contraseña"
-        android:inputType="textPassword"/>
-
-    <!-- Botón para enviar el correo y la contraseña -->
-    <Button
-        android:id="@+id/btn_login"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_alignParentStart="true"
-        android:layout_marginStart="30dp"
-        android:layout_marginEnd="30dp"
-        android:layout_below="@+id/contrasena_login"
         android:layout_marginTop="20dp"
         android:text="Iniciar sesión"
         android:textSize="18dp"/>
 
+    <Button
+        android:id="@+id/btn_registrarPrincipal"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentStart="true"
+        android:layout_marginStart="30dp"
+        android:layout_marginEnd="30dp"
+        android:layout_below="@+id/btn_loginPrincipal"
+        android:layout_marginTop="20dp"
+        android:text="Registrate"
+        android:textSize="18dp"/>
 
 </RelativeLayout>
