--- a/app/src/main/res/layout/activity_registro.xml
+++ b/app/src/main/res/layout/activity_registro.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/main"
@@ -8,15 +9,15 @@
     tools:context=".LoginActivity">
 
     <include
-        android:id="@+id/toolbar_login"
+        android:id="@+id/toolbar_registro"
         layout="@layout/toolbar_principal"></include>
 
     <TextView
         android:id="@+id/textoslogin"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/toolbar_login"
-        android:text="Bienvenido Chat a\nICC-451\n\n Inicia Sesión"
+        android:layout_below="@+id/toolbar_registro"
+        android:text="Bienvenido Chat a\nICC-451\n\n Registrate"
         android:textStyle="italic"
         android:textAlignment="center"
         android:layout_marginTop="15dp"
@@ -28,12 +29,11 @@
         android:layout_height="150dp"
         android:layout_below="@+id/textoslogin"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="20dp"
+        android:layout_marginTop="10dp"
         android:src="@drawable/chaticc"/>
 
-    <!-- Campo de texto para ingresar el correo -->
     <EditText
-        android:id="@+id/correo_login"
+        android:id="@+id/username"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentStart="true"
@@ -41,33 +41,45 @@
         android:layout_marginEnd="30dp"
         android:layout_below="@+id/imagenlogin"
         android:layout_marginTop="15dp"
+        android:hint="Ingresar nombre de usuario"
+        android:inputType="textEmailAddress"/>
+
+    <!-- Campo de texto para ingresar el correo -->
+    <EditText
+        android:id="@+id/correo"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentStart="true"
+        android:layout_marginStart="30dp"
+        android:layout_marginEnd="30dp"
+        android:layout_below="@+id/username"
+        android:layout_marginTop="15dp"
         android:hint="Ingresar correo"
         android:inputType="textEmailAddress"/>
 
     <!-- Campo de texto para ingresar la contraseña -->
     <EditText
-        android:id="@+id/contrasena_login"
+        android:id="@+id/contrasena"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentStart="true"
         android:layout_marginStart="30dp"
         android:layout_marginEnd="30dp"
-        android:layout_below="@+id/correo_login"
+        android:layout_below="@+id/correo"
         android:layout_marginTop="15dp"
         android:hint="Ingresar contraseña"
         android:inputType="textPassword"/>
 
-    <!-- Botón para enviar el correo y la contraseña -->
     <Button
-        android:id="@+id/btn_login"
+        android:id="@+id/registrar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentStart="true"
         android:layout_marginStart="30dp"
         android:layout_marginEnd="30dp"
-        android:layout_below="@+id/contrasena_login"
-        android:layout_marginTop="20dp"
-        android:text="Iniciar sesión"
+        android:layout_below="@+id/contrasena"
+        android:layout_marginTop="10dp"
+        android:text="Registrate"
         android:textSize="18dp"/>
 
 
