--- a/app/src/main/res/layout/activity_inicio.xml
+++ b/app/src/main/res/layout/activity_inicio.xml
@@ -41,6 +41,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:background="@color/cardview_dark_background"
+            app:tabTextColor="@color/white"
             />
 
     </com.google.android.material.appbar.AppBarLayout>
