--- a/app/src/main/res/layout/activity_message.xml
+++ b/app/src/main/res/layout/activity_message.xml
@@ -59,14 +59,13 @@
 
 
         <EditText
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
             android:id="@+id/texto_enviado"
-            android:background="@android:color/transparent"
-            android:hint="Escribe un mensaje..."
-            android:layout_toLeftOf="@+id/btn_enviar"
+            android:layout_width="304dp"
+            android:layout_height="wrap_content"
             android:layout_centerVertical="true"
-            />
+            android:layout_toLeftOf="@+id/btn_enviar"
+            android:background="@android:color/transparent"
+            android:hint="Escribe un mensaje..." />
 
         <ImageButton
             android:layout_width="40dp"
@@ -75,6 +74,15 @@
             android:id="@+id/btn_enviar"
             android:layout_alignParentEnd="true"
             android:layout_alignParentRight="true"/>
+
+        <ImageButton
+            android:id="@+id/btn_enviar_imagen"
+            android:layout_width="40dp"
+            android:layout_height="40dp"
+            android:layout_alignParentStart="true"
+            android:layout_marginStart="5dp"
+            android:background="@android:color/transparent"
+            app:srcCompat="@android:drawable/ic_menu_camera" />
 
     </RelativeLayout>
 
