--- a/app/src/main/res/layout/chat_item_left.xml
+++ b/app/src/main/res/layout/chat_item_left.xml
@@ -20,6 +20,16 @@
             android:textSize="18sp"
             android:textColor="#000"
             android:padding="8dp"/>
+
+        <ImageView
+            android:id="@+id/mostrar_imagen"
+            android:layout_width="200dp"
+            android:layout_height="200dp"
+            android:layout_below="@id/mostrar_mensaje"
+            android:visibility="gone"
+            android:scaleType="centerCrop"
+            android:layout_marginTop="8dp"/>
+
     </RelativeLayout>
 
 </LinearLayout>
