Mostrando imagen correctamente en el chat

--- a/app/src/main/res/layout/chat_item_left.xml
+++ b/app/src/main/res/layout/chat_item_left.xml
@@ -19,7 +19,8 @@
             android:text="Mensaje recibido"
             android:textSize="18sp"
             android:textColor="#000"
-            android:padding="8dp"/>
+            android:padding="8dp"
+            android:visibility="gone"/>
 
         <ImageView
             android:id="@+id/mostrar_imagen"
