--- a/app/src/main/res/layout/user_item.xml
+++ b/app/src/main/res/layout/user_item.xml
@@ -3,13 +3,22 @@
     android:layout_width="match_parent"
     android:padding="10dp"
     android:layout_height="wrap_content">
-    
+
     <de.hdodenhof.circleimageview.CircleImageView
         android:layout_width="50dp"
         android:layout_height="50dp"
         android:id="@+id/imagen_deperfil"
         android:src="@mipmap/ic_launcher"
         />
+
+    <ImageView
+        android:id="@+id/estado_online_offline"
+        android:layout_width="12dp"
+        android:layout_height="12dp"
+        android:layout_alignEnd="@id/imagen_deperfil"
+        android:layout_marginEnd="4dp"
+        android:background="@drawable/circle_offline"
+        android:contentDescription="Estado online/offline" />
 
     <TextView
         android:layout_width="wrap_content"
@@ -20,8 +29,5 @@
         android:layout_toEndOf="@+id/imagen_deperfil"
         android:layout_marginLeft="10dp"
         android:layout_centerVertical="true"
-        android:textSize="18sp"
-
-        />
-
+        android:textSize="18sp" />
 </RelativeLayout>
